welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: '(' expected but identifier found.
if avance() x=x+1
   ^