welcome.lessons.welcome.variables.Variables.scala.code
var x:Int=0
if avance() x=x+1
while (!estSurBiscuit) avance()
prendBiscuit
